infra/base/hasura/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql
spec:
  template:
    spec:
      containers:
        - name: graphql
          image: hasura/graphql-engine:v2.37.0-ce
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources: {}
          # resources:
          #   limits:
          #     memory: '256Mi'
          #     cpu: '500m'
          #   requests:
          #     memory: '128Mi'
          #     cpu: '50m'
