infra/base/hasura/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql
spec:
  publishNotReadyAddresses: true # We want the servers to become available even if they're not ready
  ports:
    - name: http
      port: 8080
      targetPort: http
